# LLM-Counsel

./: README.md
llm-counsel/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
llm-counsel/.github/workflows/: ci.yaml  nightly.yaml  release.yaml
llm-counsel/api/: main.py
llm-counsel/api/middleware/: __init__.py  logging.py
llm-counsel/api/routes/: __init__.py  analytics.py  health.py  query.py
llm-counsel/config/: __init__.py  models.yaml  routing_rules.yaml  settings.py
llm-counsel/core/: __init__.py  cache.py  dissent.py  judge.py  metrics.py  panel.py  router.py  shared.py
llm-counsel/dashboard/: app.py
llm-counsel/dashboard/components/: __init__.py  cost_tracker.py  deliberation_view.py  dissent_report.py  latency_charts.py
llm-counsel/evaluation/: __init__.py  benchmarks.py  calibration.py
llm-counsel/models/: __init__.py  registry.py
llm-counsel/models/adapters/: __init__.py  anthropic.py  base.py  openai.py  together.py
llm-counsel/models/classifier/: __init__.py  complexity.py  train.py
llm-counsel/scripts/: export_metrics.py  run_benchmark.py
llm-counsel/tests/: conftest.py
llm-counsel/tests/e2e/: test_query_flow.py
llm-counsel/tests/fixtures/: __init__.py  conftest.py  mock_responses.py  sample_queries.py
llm-counsel/tests/integration/: test_api_endpoints.py  test_full_pipeline.py  test_model_calls.py
llm-counsel/tests/unit/: test_adapters.py  test_cache.py  test_dissent.py  test_judge.py  test_metrics.py  test_panel.py  test_router.py
